feat: set uid for change the user

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.embeddedhtml": "html",
         "my_exec.h": "c",
         "my_sudo.h": "c",
-        "flags.h": "c"
+        "flags.h": "c",
+        "set_uid.h": "c"
     }
 }
